Fix code alignment in all files

--- a/css/menu-burger.css
+++ b/css/menu-burger.css
@@ -117,26 +117,29 @@ body {
 
 .fa-facebook {
     color: #3b5998;
+    transition: transform .5s;
 }
 
 .fa-twitter {
     color: #00aced;
+    transition: transform .5s;
 }
 
 .fa-instagram {
     color: #517fa4;
+    transition: transform .5s;
 }
 
 .fa-youtube {
     color: #bb0000;
+    transition: transform .5s;
 }
 
 .fa-facebook:hover,
 .fa-twitter:hover,
 .fa-instagram:hover,
 .fa-youtube:hover {
-    color: #d5d5d5;
-    transition: 0.3s;
+    transform: scale(1.3);
 }
 
 /*Footer Section*/
