--- a/css/menu-burrito.css
+++ b/css/menu-burrito.css
@@ -84,6 +84,7 @@ body {
 .timage {
     margin-top: 20px;
     border: 2px solid #E8E2DB;
+    overflow: hidden;
 }
 
 .timage img {
@@ -120,26 +121,29 @@ body {
 
 .fa-facebook {
     color: #3b5998;
+    transition: transform .5s;
 }
 
 .fa-twitter {
     color: #00aced;
+    transition: transform .5s;
 }
 
 .fa-instagram {
     color: #517fa4;
+    transition: transform .5s;
 }
 
 .fa-youtube {
     color: #bb0000;
+    transition: transform .5s;
 }
 
 .fa-facebook:hover,
 .fa-twitter:hover,
 .fa-instagram:hover,
 .fa-youtube:hover {
-    color: #d5d5d5;
-    transition: 0.3s;
+    transform: scale(1.3);
 }
 
 /*Footer Section*/
